[package]
name = "rnvm"
version = "0.3.0"
edition = "2024"
authors = ["jakeywaldrip@gmail.com>"]
description = "Blazingly fast Node version manager"
license = "MIT"
repository = "https://github.com/jakewaldrip/rnvm"
readme = "README.md"
keywords = ["nvm", "cli", "node"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
indicatif = "0.18.3"
tar = "0.4.44"
ureq = "3.1.4"
xz2 = "0.1.7"

